--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -41,4 +41,9 @@ jobs:
           python run3.py &
           python run4.py &
           python run5.py &
+          python run6.py &
+          python run7.py &
+          python run8.py &
+          python run9.py &
+          python run10.py &
           sleep 21600 
